--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "juststeveking/http-status-code": "^2.0",
         "juststeveking/laravel-postcodes": "^2.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "spatie/laravel-query-builder": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
