--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-enum": "^3.0",
         "spatie/laravel-query-builder": "^5.0"
     },
     "require-dev": {
