Adding Some Event Sourcing Packages - courtesy of Freek

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "spatie/laravel-enum": "^3.0",
+        "spatie/laravel-event-sourcing": "^7.2",
         "spatie/laravel-query-builder": "^5.0"
     },
     "require-dev": {
