--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.7",
         "spatie/laravel-enum": "^3.0",
         "spatie/laravel-event-sourcing": "^7.2",
-        "spatie/laravel-query-builder": "^5.0"
+        "spatie/laravel-query-builder": "^5.0",
+        "stripe/stripe-php": "^8.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
